[package]
name = "osc"
version = "0.1.0"
authors = ["Muller Lee <s094392@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
register = "1.0.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
